--- a/src/components/product-details.css
+++ b/src/components/product-details.css
@@ -2,32 +2,32 @@
   background: var(--success) !important;
 }
 
-.ant-select-selector {
+.product-category > .ant-select-selector {
   height: 53px !important;
   display: flex;
   align-items: center;
 }
 
-.ant-carousel .slick-dots li button {
+.product-details-carousel > .slick-dots li button {
   height: 8px;
   width: 8px;
   border-radius: 100px;
   background: gray;
 }
-.ant-carousel .slick-dots li {
+.product-details-carousel > .slick-dots li {
   height: 8px;
   width: 8px;
   border-radius: 100px;
   background: gray;
 }
 
-.ant-carousel .slick-dots li.slick-active button {
+.product-details-carousel > .slick-dots li.slick-active button {
   opacity: 1;
   background: var(--secondary-gold);
   height: 6px;
   width: 25px;
 }
-.ant-carousel .slick-dots li.slick-active {
+.product-details-carousel > .slick-dots li.slick-active {
   height: 6px;
   width: 25px;
   border-radius: 100px;
