--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -294,3 +294,7 @@
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
+
+.shadowy:hover {
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
