--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,11 @@
     display: flex;
   }
 }
+
+.ant-tabs-nav::before {
+  position: absolute !important;
+  right: 0 !important;
+  left: 0 !important;
+  border-bottom: 2px solid var(--grey-700) !important;
+  content: "" !important;
+}
