--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -340,3 +340,10 @@
 
   font-weight: bold;
 }
+.custom-checkbox .ant-checkbox-checked:after {
+  border: 0;
+}
+
+.gazzar-switch {
+  transform: scale(1.4);
+}
